# olfacto_ros2

./: .gitignore  README.md  rosgraph.dot
3d_files/: PSU_clip.STL  distributor_clip.STL  filter_holderV1.STL  hdmi_hold_lid.STL  m10_washer.STL  m3_washer.STL  manifold_spacer.STL  mfc_mount.STL  new_reducerV3.STL  odor_bottle_cap_v3.STL  readme.md  tube_holder_mri.STL
arduino/arduino_sensor_publish/: arduino_sensor_publish.ino
arduino/arduino_valve_control/: arduino_valve_control.ino
arduino/teensy_pid/: teensy_pid.ino
scripts/: Olfactometer.psyexp  Olfactometer_lastrun.py  Schedule.psyexp  Schedule_lastrun.py  arduino_valve_test.py  control_pc_csv.py  control_pc_new.py  example_schedule.csv  measure_sample_teensy.py  mfc_change_address.py  mfc_test.py  multiple_com_test.py  multiple_mfc_test.py  olfactometer_control.py  test.psyexp  test_lastrun.py
scripts/programs/: .~lock.example.csv#  2odours.csv  clean.csv  concentration.csv  example.csv  latency_flush.csv  new.csv  only_stim.csv
src/keyboard_valve_control/: package.xml  setup.cfg  setup.py
src/keyboard_valve_control/keyboard_valve_control/: keyboard_valve_controller.py
src/launch_files/: package.xml  setup.py
src/launch_files/launch_files/: start_olfactometer_vacuum.py  start_valve_mfc.py
src/mass_flow_controller/: package.xml  setup.cfg  setup.py
src/mass_flow_controller/mass_flow_controller/: mass_flow_controller_node.py
src/olfacto_web_control/: package.xml  setup.cfg  setup.py
src/sensor_output/: package.xml  setup.cfg  setup.py
src/valve_control/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
