<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mass_flow_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olfacto@todo.todo">olfacto</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensirion-shdlc-driver</exec_depend>
  <exec_depend>sensirion-uart-sfx6xxx</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
